--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -5,6 +5,14 @@ body {
     width: 100%;
     height: 100%;
     font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Roboto Slab', serif; 
+    font-family: 'Bitter', serif;
+    font-family: 'Vollkorn', serif;
+    font-family: 'Tinos', serif;
+    font-family: 'Karma', serif;
+    font-family: 'Scope One', serif;
+    font-family: 'Andada', serif;
+    font-family: 'Maitree', serif;
     color: white;
     background-color: black;
 }
@@ -21,8 +29,18 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: uppercase;
     font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Tangerine', cursive;
+    font-family: 'Mr Dafoe', cursive;
+    font-family: 'Ruthie', cursive;
+    font-family: 'Patua One', cursive;
+    font-family: 'Passion One', cursive;
+    font-family: 'Rakkas', cursive;
+    font-family: 'Maiden Orange', cursive;
+    font-family: 'Overlock SC', cursive;
+    font-family: 'Bigshot One', cursive;
+
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -142,7 +160,7 @@ a {
             font-size: 40px;
         }
         .intro-text {
-            font-size: 18px;
+            font-size: 14px;
         }
     }
     @media(min-width:768px) {
