--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -4,15 +4,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-family: 'Roboto Slab', serif; 
-    font-family: 'Bitter', serif;
-    font-family: 'Vollkorn', serif;
-    font-family: 'Tinos', serif;
     font-family: 'Karma', serif;
-    font-family: 'Scope One', serif;
-    font-family: 'Andada', serif;
-    font-family: 'Maitree', serif;
     color: white;
     background-color: black;
 }
@@ -29,17 +21,8 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    font-family: 'Dancing Script', cursive;
-    font-family: 'Tangerine', cursive;
-    font-family: 'Mr Dafoe', cursive;
-    font-family: 'Ruthie', cursive;
-    font-family: 'Patua One', cursive;
     font-family: 'Passion One', cursive;
-    font-family: 'Rakkas', cursive;
-    font-family: 'Maiden Orange', cursive;
-    font-family: 'Overlock SC', cursive;
-    font-family: 'Bigshot One', cursive;
-
+    
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -75,7 +58,7 @@ a {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(white, 0.3);
     text-transform: uppercase;
-    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Passion One', cursive;
     background-color: black;
     .navbar-toggle {
         padding: 4px 6px;
@@ -159,7 +142,7 @@ a {
             font-size: 40px;
         }
         .intro-text {
-            font-size: 14px;
+            font-size: 12px;
         }
     }
     @media(min-width:768px) {
@@ -170,7 +153,7 @@ a {
                 font-size: 100px;
             }
             .intro-text {
-                font-size: 26px;
+                font-size: 16px;
             }
         }
     }
