--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -21,7 +21,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    font-family: 'Passion One', cursive;
+    font-family: 'Dancing Script';
     
     font-weight: 700;
     letter-spacing: 1px;
@@ -58,7 +58,7 @@ a {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(white, 0.3);
     text-transform: uppercase;
-    font-family: 'Passion One', cursive;
+    font-family: 'Passion One';
     background-color: black;
     .navbar-toggle {
         padding: 4px 6px;
