--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -140,6 +140,8 @@ a {
         vertical-align: middle;
         .brand-heading {
             font-size: 40px;
+            text-shadow: 2px 2px 2px #aaa;
+
         }
         .intro-text {
             font-size: 12px;
