--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -21,8 +21,7 @@ h4,
 h5,
 h6 {
   margin: 0 0 35px;
-  font-family: 'Dancing Script', cursive;
-
+  font-family: 'Tangerine', cursive;
   font-weight: 700;
   letter-spacing: 1px;
 }
@@ -139,7 +138,7 @@ a:focus {
   font-size: 40px;
 }
 .intro .intro-body .intro-text {
-  font-size: 12px;
+  font-size: 16px;
 }
 @media (min-width: 768px) {
   .intro {
