--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -6,7 +6,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: 'Scope One', serif;
+  font-family: 'Bitter', serif;
   color: white;
   background-color: black;
 }
