--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -21,7 +21,7 @@ h4,
 h5,
 h6 {
   margin: 0 0 35px;
-  font-family: 'Tangerine', cursive;
+  font-family: 'Mr Dafoe', cursive;
   font-weight: 700;
   letter-spacing: 1px;
 }
