--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -14,8 +14,18 @@ html {
   width: 100%;
   height: 100%;
 }
-h1,
-h2,
+h1,{
+  margin: 0 0 35px;
+  font-family: 'Mr Dafoe', cursive;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+h2,{
+  margin: 0 0 35px;
+  font-family: 'Mr Dafoe', cursive;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
 h3,
 h4,
 h5,
