--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -55,7 +55,7 @@ a:focus {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
-  font-family: 'Overlock CS', cursive;
+  font-family: 'Passion One', cursive;
   background-color: black;
 }
 .navbar-custom .navbar-toggle {
@@ -136,10 +136,11 @@ a:focus {
 }
 .intro .intro-body .brand-heading {
   font-size: 40px;
-  text-shadow: 2px 2px 2px #aaa;
+  text-shadow: 4px 2px 2px #aaa;
 
 }
 .intro .intro-body .intro-text {
+  font-weight: bold;
   font-size: 16px;
 }
 @media (min-width: 768px) {
