--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -136,7 +136,7 @@ a:focus {
 }
 .intro .intro-body .brand-heading {
   font-size: 40px;
-  text-shadow: 4px 2px 2px #aaa;
+  text-shadow: 2px 4px 2px #aaa;
 
 }
 .intro .intro-body .intro-text {
@@ -222,7 +222,7 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.download-section {
+.bandcamp-section {
   width: 100%;
   padding: 50px 0;
   color: white;
@@ -242,7 +242,7 @@ a:focus {
   .content-section {
     padding-top: 250px;
   }
-  .download-section {
+  .bandcamp-section {
     padding: 100px 0;
   }
   #map {
