--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -30,7 +30,7 @@ p {
   font-size: 18px;
   line-height: 1.5;
 }
-@media (min-width: 481px) {
+@media (min-width: 350px) {
   p {
     margin: 0 0 35px;
     font-size: 20px;
@@ -100,7 +100,7 @@ a:focus {
 .navbar-custom .nav li.active a:hover {
   color: white;
 }
-@media (min-width: 481px) {
+@media (min-width: 350px) {
   .navbar-custom {
     padding: 20px 0;
     border-bottom: none;
@@ -143,7 +143,7 @@ a:focus {
   font-weight: bold;
   font-size: 16px;
 }
-@media (min-width: 481px) {
+@media (min-width: 350px) {
   .intro {
     height: 100%;
     padding: 0;
@@ -152,7 +152,7 @@ a:focus {
     font-size: 100px;
   }
   .intro .intro-body .intro-text {
-    font-size: 16px;
+    font-size: 20px;
   }
 }
 .btn-circle {
@@ -233,16 +233,31 @@ a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
 #map {
   width: 100%;
   height: 200px;
   margin-top: 100px;
 }
-@media (min-width: 767px) {
+@media (min-width: 350px) {
   .content-section {
     padding-top: 250px;
   }
-  .bandcamp-section {
+  .widget-section {
     padding: 100px 0;
   }
   #map {
@@ -252,7 +267,7 @@ a:focus {
 }
 .btn {
   text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Scope One", crusive;
   font-weight: 400;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
