--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -222,7 +222,7 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.bandcamp-section {
+.widget-section {
   width: 100%;
   padding: 50px 0;
   color: white;
