--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -136,11 +136,10 @@ a:focus {
 }
 .intro .intro-body .brand-heading {
   font-size: 40px;
-  text-shadow: 2px 2px 2px #aaa;
+  text-shadow: 3px 3px 3px #aaa;
 
 }
 .intro .intro-body .intro-text {
-  font-weight: bold;
   font-size: 16px;
 }
 @media (min-width: 350px) {
@@ -220,7 +219,7 @@ a:focus {
   }
 }
 .content-section {
-  padding-top: 100px;
+  padding-top: 50px;
 }
 .widget-section {
   width: 100%;
@@ -242,6 +241,21 @@ a:focus {
 }
 
 .video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+.music-container {
+	position:relative;
+	padding-bottom:162.25%;
+	padding-top:20px;
+	height:0;
+	overflow:hidden;
+}
+
+.music-container iframe, .music-container object, .music-container embed {
 	position:absolute;
 	top:0;
 	left:0;
