--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -21,9 +21,9 @@ h4,
 h5,
 h6 {
   margin: 0 0 35px;
-  font-family: 'Tangerine', cursive;
+  font-family: 'Parisienne', cursive;
   font-weight: 700;
-  letter-spacing: 1.5px;
+  letter-spacing: 2px;
 }
 p {
   margin: 0 0 25px;
