--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -22,7 +22,7 @@ h5,
 h6 {
   margin: 0 0 35px;
   font-family: 'Parisienne', cursive;
-  font-weight: 700;
+  font-weight: 800;
   letter-spacing: 2px;
 }
 p {
@@ -135,7 +135,9 @@ a:focus {
   vertical-align: middle;
 }
 .intro .intro-body .brand-heading {
-  font-size: 40px;
+  font-size: 36px;
+  text-shadow: 3px 2px white;
+
 }
 .intro .intro-body .intro-text {
   font-size: 16px;
@@ -146,7 +148,7 @@ a:focus {
     padding: 0;
   }
   .intro .intro-body .brand-heading {
-    font-size: 100px;
+    font-size: 80px;
   }
   .intro .intro-body .intro-text {
     font-size: 20px;
