--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -21,8 +21,8 @@ h4,
 h5,
 h6 {
   margin: 0 0 35px;
-  font-family: 'Alex Brush', cursive;
-  font-weight: 700;
+  font-family: 'Parisienne', cursive;
+  font-weight: 600;
   letter-spacing: 2px;
 }
 p {
