--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -243,6 +243,20 @@ a:focus {
 	width:100%;
 	height:100%;
 }
+.flickrwrap {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+.flickrwrap iframe {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
 #map {
   width: 100%;
   height: 200px;
