--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -130,7 +130,7 @@ a {
     padding: 100px 0;
     text-align: center;
     color: white;
-    background: url(../img/35-1.JPG) no-repeat bottom center scroll;
+    background: url(../img/DSC_5466.jpg) no-repeat bottom center scroll;
     background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
