--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -258,6 +258,9 @@ a:focus {
 	width:100%;
 	height:100%;
 }
+.fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget span iframe[style] {
+width: 100% !important;
+}
 #map {
   width: 100%;
   height: 200px;
