--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -124,7 +124,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/DSC_5466.jpg) no-repeat top center scroll;
+  background: url(../img/intro-bg.jpg) no-repeat top center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
