--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -39,7 +39,7 @@ p {
   }
 }
 a {
-  color: #42DCA3;
+  color: #FFCC00;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -47,7 +47,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #1d9b6c;
+  color: #E5B700;
 }
 .light {
   font-weight: 400;
@@ -286,15 +286,15 @@ a:focus {
 }
 .btn-default {
   border: 1px solid #42DCA3;
-  color: #42DCA3;
+  color: #FFCC00;
   background-color: transparent;
 }
 .btn-default:hover,
 .btn-default:focus {
-  border: 1px solid #42DCA3;
+  border: 1px solid #FFCC00;
   outline: none;
   color: black;
-  background-color: #42DCA3;
+  background-color: #FFCC00;
 }
 ul.banner-social-buttons {
   margin-top: 0;
