--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -285,7 +285,7 @@ a:focus {
   border-radius: 0;
 }
 .btn-default {
-  border: 1px solid #42DCA3;
+  border: 1px solid #FFCC00;
   color: #FFCC00;
   background-color: transparent;
 }
