--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -31,7 +31,7 @@ p {
   font-size: 18px;
   line-height: 1.5;
 }
-@media (min-width: 350px) {
+@media (min-width: 786px) {
   p {
     margin: 0 0 30px;
     font-size: 20px;
@@ -101,7 +101,7 @@ a:focus {
 .navbar-custom .nav li.active a:hover {
   color: white;
 }
-@media (min-width: 350px) {
+@media (min-width: 786px) {
   .navbar-custom {
     padding: 20px 0;
     border-bottom: none;
@@ -124,7 +124,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+  background: url(../img/intro-bg.jpg) no-repeat top center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -141,7 +141,7 @@ a:focus {
 .intro .intro-body .intro-text {
   font-size: 16px;
 }
-@media (min-width: 350px) {
+@media (min-width: 786px) {
   .intro {
     height: 100%;
     padding: 0;
@@ -263,7 +263,7 @@ a:focus {
   height: 200px;
   margin-top: 100px;
 }
-@media (min-width: 350px) {
+@media (min-width: 786px) {
   .content-section {
     padding: 50px;
   }
