--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -137,6 +137,8 @@ a:focus {
 }
 .intro .intro-body .brand-heading {
   font-size: 40px;
+  color: #FFCC00;
+
 }
 .intro .intro-body .intro-text {
   font-size: 16px;
@@ -148,6 +150,8 @@ a:focus {
   }
   .intro .intro-body .brand-heading {
     font-size: 90px;
+    color: #FFCC00;
+
   }
   .intro .intro-body .intro-text {
     font-size: 20px;
