--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -122,7 +122,7 @@ a:focus {
   width: 100%;
   height: auto;
   padding: 100px 0;
-  text-align: center;
+  text-align: bottom center;
   color: white;
   background: url(../img/intro-bg.jpg) no-repeat top center scroll;
   background-color: black;
