--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -122,7 +122,7 @@ a:focus {
   width: 100%;
   height: auto;
   padding: 100px 0;
-  text-align: bottom center;
+  text-align: center;
   color: white;
   background: url(../img/intro-bg.jpg) no-repeat top center scroll;
   background-color: black;
@@ -138,6 +138,7 @@ a:focus {
 .intro .intro-body .brand-heading {
   font-size: 38px;
   color: #FFCC00;
+  padding-top: 100px;
 
 }
 .intro .intro-body .intro-text {
