--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -152,6 +152,7 @@ a:focus {
   .intro .intro-body .brand-heading {
     font-size: 90px;
     color: #FFCC00;
+    padding-top: 100px;
 
   }
   .intro .intro-body .intro-text {
