--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -143,6 +143,7 @@ a:focus {
 }
 .intro .intro-body .intro-text {
   font-size: 16px;
+  font-weight: bold;
 }
 @media (min-width: 786px) {
   .intro {
@@ -157,6 +158,7 @@ a:focus {
   }
   .intro .intro-body .intro-text {
     font-size: 20px;
+    font-weight: bold;
   }
 }
 .btn-circle {
