--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -54,14 +54,14 @@ a:focus {
 }
 .navbar-custom {
   margin-bottom: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid rgba(255, 204, 0, 0.3);
   text-transform: uppercase;
   font-family: 'Scope One', cursive;
   background-color: black;
 }
 .navbar-custom .navbar-toggle {
-  color: white;
-  background-color: rgba(255, 255, 255, 0.2);
+  color: FFCC00;
+  background-color: rgba(255, 204, 0, 0.2);
   font-size: 12px;
 }
 .navbar-custom .navbar-toggle:focus,
@@ -75,7 +75,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom a {
-  color: white;
+  color: FFCC00;
 }
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
@@ -83,7 +83,7 @@ a:focus {
   transition: background 0.3s ease-in-out;
 }
 .navbar-custom .nav li a:hover {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 204, 0, 0.8);
   outline: none;
   background-color: transparent;
 }
@@ -96,7 +96,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom .nav li.active a {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 204, 0, 0.3);
 }
 .navbar-custom .nav li.active a:hover {
   color: white;
@@ -106,6 +106,7 @@ a:focus {
     padding: 20px 0;
     border-bottom: none;
     letter-spacing: 1px;
+    font-weight: bold;
     background: transparent;
     -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
     -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
@@ -114,7 +115,7 @@ a:focus {
   .navbar-custom.top-nav-collapse {
     padding: 0;
     background: black;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(255, 204, 0, 0.3);
   }
 }
 .intro {
@@ -138,7 +139,7 @@ a:focus {
 .intro .intro-body .brand-heading {
   font-size: 38px;
   color: #FFCC00;
-  padding-top: 100px;
+  padding-top: 120px;
 
 }
 .intro .intro-body .intro-text {
