--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -60,7 +60,7 @@ a:focus {
   background-color: black;
 }
 .navbar-custom .navbar-toggle {
-  color: FFCC00;
+  color: white;
   background-color: rgba(255, 204, 0, 0.2);
   font-size: 12px;
 }
