--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -228,14 +228,7 @@ a:focus {
   padding: 30px;
 }
 .widget-section {
-  width: 100%;
-  padding: 30px 0;
-  color: white;
-  background-color: black;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+  padding: 20px;
 }
 .video-container {
 	position:relative;
@@ -275,7 +268,7 @@ a:focus {
     padding: 50px;
   }
   .widget-section {
-    padding: 100px 0;
+    padding: 50px 0;
   }
   #map {
     height: 400px;
