--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -25,6 +25,7 @@ h6 {
   font-family: 'Parisienne', cursive;
   font-weight: 600;
   letter-spacing: 2px;
+  padding-top: 20px
 }
 p {
   margin: 0 0 25px;
