--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -125,7 +125,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: linear-gradient(rgba(255,0,0,0), rgba(255,0,0,0), #000000), url("../img/intro-bg.jpg") no-repeat top center scroll; 
+  background: linear-gradient(rgba(255,0,0,0), rgba(255,0,0,0), rgba(0,0,0,1)), url("../img/intro-bg.jpg") no-repeat top center scroll; 
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
