--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -125,7 +125,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: webkit-gradient(linear, bottom, (rgba(0,0,0,0), rgba(0,0,0,0), rgba(0,0,0,0.1), rgba(0,0,0,1)), url("../img/intro-bg.jpg") no-repeat top center scroll; 
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.3)), color-stop(75%, rgba(22, 22, 22, 0.7)), to(#161616)), url("../img/intro-bg.jpg") no-repeat top center scroll;
   background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0), rgba(0,0,0,0.1), rgba(0,0,0,1)), url("../img/intro-bg.jpg") no-repeat top center scroll;
   background-color: black;
   -webkit-background-size: cover;
